interstellar/tests/snapshots/gql_snapshots__parse_tofloat_function_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: p
            labels:
              - player
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
call_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        FunctionCall:
          name: toFloat
          args:
            - Property:
                variable: p
                property: ppg
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause: ~
limit_clause: ~
